[tool.poetry]
name = "bartiq"
version = "0.0.0"
description = "Symbolic Quantum Resource Estimation compilation"
authors = ["PsiQuantum, Corp."]
license = "Apache 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7"
sympy = "^1.12"
pyparsing ="~3.1.2"
qref = "0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest_diff = "^0.1.14"
mypy = "^1.9.0"
flake8 = "^7.0.0"
pyproject_flake8 = "*"
black = "^24.4.1"
isort = "^5.13.2"
notebook = "^7.1.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-link-marker = "^0.1.3"
mkdocs-material = "^9.5.15"
mkdocs-open-in-new-tab = "^1.0.3"
mkdocstrings = {version = "^0.24.2", extras = ["python"]}
mkdocs-jupyter = "^0.24.7"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"
mike = "^2.0.0"


[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.flake8]
max-line-length = 120
docstring-convention = "google"
ignore = [
    # Allow continuation line under-indented for visual indent.
    "E128",
    # line contains XXX.
    "T102",
    # Missing docstring in magic method.
    "D105",
    # Missing docstring in __init__.
    "D107",
    # Missing "Returns" in Docstring.
    "DAR201",
    # 1 blank line required between summary line and description.
    "D205",
    # Multi-line docstring summary should start at the first line.
    "D212",
    # The docstring is missing an exception raised.
    "DAR401",
    # The docstring describes an exception not explicitly raised.
    "DAR402",
    # Line break after the binary operator
    "W503",
    "W504",
]
per-file-ignores = [
    "tests/**/test_*.py:D103,D102,D101",
    "__init__.py:F401",
]

[tool.black]
line-length = 120
target-version = ['py39']


[[tool.mypy.overrides]]
module = "qref.*"
ignore_missing_imports = true
