[tool.poetry]
name = "bartiq"
version = "0.8.1"
description = "Symbolic Quantum Resource Estimation compilation"
authors = ["PsiQuantum, Corp."]
license = "Apache 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7"
sympy = "^1.12"
pyparsing ="~3.1.2"
qref = "0.9.0"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
ipytree = { version = "^0.2.2", optional = true }
ipywidgets = { version = "^8.1.2", optional = true }
traitlets = { version = "^5.14.3", optional = true }
scipy = { version = "^1.14.1", optional = true }

[tool.poetry.extras]
jupyter = ["ipytree", "ipywidgets", "traitlets"]
optimization = ["scipy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest_diff = "^0.1.14"
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
black = "^24.4.1"
isort = "^5.13.2"
notebook = "^7.1.3"
nbconvert = "^7.16.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-link-marker = "^0.1.3"
mkdocs-material = "^9.5.15"
mkdocs-open-in-new-tab = "^1.0.3"
mkdocs-jupyter = "^0.24.7"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"
mike = "^2.0.0"
matplotlib = "^3.9.1.post1"
mkdocstrings = ">=0.26.1,"
mkdocstrings-python = ">=1.11.1"


[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.black]
line-length = 120
target-version = ['py39']


[[tool.mypy.overrides]]
module = ["ipywidgets.*", "ipytree.*", "sympy.*"]
ignore_missing_imports = true
